--- a/style.css
+++ b/style.css
@@ -66,3 +66,33 @@ nav div h1{
     top: 50%;
     transform: translate(-50%,-50%);
 }
+
+
+.login {
+    padding: 2%;
+    width: 30vw;
+    margin: 5% auto;
+    background-color: #ffffff;
+    border: 2px solid #192655;
+    box-shadow: #192655;
+    border-radius: 5%;
+}
+
+.login * {
+    display: block;
+    margin: 3% auto;
+    text-align: center;
+}
+
+.login > form > *{
+    margin: 3% auto;
+}
+
+.login > button, #submit {
+    padding: 2%;
+    margin-top: 6%;
+}
+
+#logo-login {
+    max-width: 30%;
+}
