--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 
 body{
     height: 100vh;
-    background-color: #3F612D;
-
+    background-color: #A8C69F;
 }
+
 #home-temp {
     height: 100vh;
     width: 100%;
@@ -28,16 +28,40 @@ body{
     top: 10%;
     border: 6px solid #233D4D;
     border-radius: 3px;
-    height: 140%;
-    width: 80%;
+    height: 100%;
+    width: 70%;
     display: flex;
+}
+
+#home-footer{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 115%;
+    height: 15%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    column-gap: 5%;
+}
+
+#home-footer button {
+    height: 60%;
+  flex-basis: 30%;
 }
 
 #logo-nav{
     flex-basis: 10%;
+    position: relative;
 }
 
-img{
+
+#logo-nav img{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
     height: 80%;
     width: 80%;
 }
@@ -46,7 +70,7 @@ nav {
     display: flex;
     height: 15%;
     flex-direction: row;
-    background-color: #A8C69F;
+    background-color: #3F612D;
 }
 
 nav div {
