--- a/style.css
+++ b/style.css
@@ -10,12 +10,28 @@ body{
     background-color: #A8C69F;
 }
 
+#profile-header{
+    margin-top: 2%;
+    text-align: center;
+}
+
 #home-temp {
     height: 100vh;
     width: 100%;
 }
 
 #home-body{
+    position: relative;
+    height: 85%;
+    width: 100%;
+}
+
+#my-profile{
+    height: 100vh;
+    width: 100%;
+}
+
+#profile-body {
     position: relative;
     height: 85%;
     width: 100%;
@@ -31,6 +47,47 @@ body{
     height: 100%;
     width: 70%;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 3%;
+}
+
+.plant {
+    position: relative;
+    margin-top: 5%;
+    flex-basis: 30%;
+    height : 40%;
+    border: 1px solid black;
+}
+
+.plant-img {
+    position:absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    height: 60%;
+    top : 5%;
+    border: 1px solid black;
+}
+
+.plant h3{
+    position:absolute;
+    left: 50%;
+    top: 65%;
+    transform: translateX(-50%);
+}
+
+.plant button {
+    position:absolute;
+    left: 50%;
+    top: 82%;
+    width : 30%;
+    transform: translateX(-50%);
+}
+.plant-img img {
+    height: 100%;
+    width: 100%;
 }
 
 #home-footer{
