--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
     font-family: 'Oswald', sans-serif;
 }
 
-body{
+body {
     height: 100vh;
     background-color: #A8C69F;
 }
 
-#profile-header{
+#profile-header {
     margin-top: 2%;
     text-align: center;
 }
@@ -20,13 +20,13 @@ body{
     width: 100%;
 }
 
-#home-body{
+#home-body {
     position: relative;
     height: 85%;
     width: 100%;
 }
 
-#my-profile{
+#my-profile {
     height: 100vh;
     width: 100%;
 }
@@ -57,40 +57,41 @@ body{
     position: relative;
     margin-top: 5%;
     flex-basis: 30%;
-    height : 40%;
+    height: 40%;
     border: 1px solid black;
 }
 
 .plant-img {
-    position:absolute;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
     width: 60%;
     height: 60%;
-    top : 5%;
+    top: 5%;
     border: 1px solid black;
 }
 
-.plant h3{
-    position:absolute;
+.plant h3 {
+    position: absolute;
     left: 50%;
     top: 65%;
     transform: translateX(-50%);
 }
 
 .plant button {
-    position:absolute;
+    position: absolute;
     left: 50%;
     top: 82%;
-    width : 30%;
+    width: 30%;
     transform: translateX(-50%);
 }
+
 .plant-img img {
     height: 100%;
     width: 100%;
 }
 
-#home-footer{
+#home-footer {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -105,29 +106,40 @@ body{
 
 #home-footer button {
     height: 60%;
-  flex-basis: 30%;
+    flex-basis: 30%;
 }
 
-#logo-nav{
+#logo-nav {
     flex-basis: 10%;
     position: relative;
 }
 
 
-#logo-nav img{
+#logo-nav img {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     height: 80%;
     width: 80%;
 }
+
 nav {
+    color: #c7c7c7;
     width: 100%;
     display: flex;
     height: 15%;
     flex-direction: row;
     background-color: #3F612D;
+}
+
+nav>div:not(:first-child):not(:last-child):hover {
+    transition:  background-color 500ms ease;
+    background-color: #4c863b;
+}
+
+.current-page {
+    background-color: #4c863b;
 }
 
 nav div {
@@ -141,11 +153,12 @@ nav div {
 nav #hi-user {
     flex-basis: 15%;
 }
-nav div h1{
+
+nav div h1 {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 
@@ -165,11 +178,12 @@ nav div h1{
     text-align: center;
 }
 
-.login > form > *{
+.login>form>* {
     margin: 3% auto;
 }
 
-.login > button, #submit {
+.login>button,
+#submit {
     padding: 2%;
     margin-top: 6%;
 }
