--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     text-align: center;
 }
 
+.plant h3{
+    font-size: 1rem;
+}
+
 #home-temp {
     height: 100vh;
     width: 100%;
@@ -41,8 +45,6 @@ body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 10%;
-    border: 6px solid #233D4D;
     border-radius: 3px;
     height: 100%;
     width: 70%;
@@ -58,7 +60,9 @@ body {
     margin-top: 5%;
     flex-basis: 30%;
     height: 40%;
-    border: 1px solid black;
+    border: 5px solid #7d7171;
+    border-radius: 5px;
+    background-color: #ebe3e3;
 }
 
 .plant-img {
@@ -78,6 +82,12 @@ body {
     transform: translateX(-50%);
 }
 
+.page-title {
+    text-align: center;
+    margin-top: 3%;
+    text-decoration: underline;
+    font-size: 2.5rem;
+}
 .plant button {
     position: absolute;
     left: 50%;
@@ -95,7 +105,7 @@ body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 115%;
+    top: 105%;
     height: 15%;
     width: 40%;
     display: flex;
@@ -107,6 +117,8 @@ body {
 #home-footer button {
     height: 60%;
     flex-basis: 30%;
+    font-size: 1rem;
+
 }
 
 #logo-nav {
@@ -150,7 +162,7 @@ nav div {
     border: 2px solid #233D4D;
 }
 
-nav #hi-user {
+nav #hi-user, #logout-nav {
     flex-basis: 15%;
 }
 
